# nand2tetris-assembler

./: .gitignore  LICENSE  README.md  constants.py  hack_assembler.py  hasm_parser.py  pyproject.toml  symbol_handler.py  translator.py
tests/: parser_test_file  parser_test_file.asm  parser_test_file_comments  parser_test_file_comments.asm  parser_test_file_whitespace  parser_test_file_whitespace.asm  test_hack_assembler.py  test_hasm_parser.py  test_symbol_handler.py  test_translation.py
